--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -48,14 +48,15 @@ jobs:
       - name: Generate matrix for ARM GCC
         id: set-matrix-armgcc
         run: |
-          MATRIX_JSON=$(python tools/ci.py --toolchain arm-gcc | sed 's/"/\\"/g')
+          MATRIX_JSON=$(python tools/ci.py --toolchain arm-gcc)
           echo $MATRIX_JSON
+          echo "matrix=$MATRIX_JSON"
           echo "matrix=$MATRIX_JSON" >> $GITHUB_OUTPUT
 
       - name: Generate matrix for ARM Clang
         id: set-matrix-armclang
         run: |
-          MATRIX_JSON={"family": ["stm32f0"]
+          MATRIX_JSON={"family": ["stm32f0"]}
           echo "matrix=$MATRIX_JSON" >> $GITHUB_OUTPUT
 
   # ---------------------------------------
