--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -55,8 +55,9 @@ jobs:
       - name: Generate matrix for ARM Clang
         id: set-matrix-armclang
         run: |
-          #echo "matrix=$MATRIX_JSON" >> $GITHUB_OUTPUT
-          echo 'matrix={"family": ["stm32f0"]}' >> $GITHUB_OUTPUT
+          MATRIX_JSON=$(python tools/ci.py --toolchain arm-clang)
+          echo "matrix=$MATRIX_JSON"
+          echo "matrix=$MATRIX_JSON" >> $GITHUB_OUTPUT
 
   # ---------------------------------------
   # Build ARM with GCC
