--- a/.github/actions/prepare_build/action.yml
+++ b/.github/actions/prepare_build/action.yml
@@ -8,6 +8,11 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Setup Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.x'
+
     - name: Checkout pico-sdk for rp2040
       if: contains(inputs.family, 'rp2040')
       uses: actions/checkout@v4
